FreeST/test/Programs/InvalidTests/SessionTypes/receiveOnOutChannel/receiveOnOutChannel.fst
f : !Int -> (Int, Skip)
f c = receive c

main : Int
main = 5
